feat(device) detect brand Sharp models: Aquos Zero 2 (906SH), Aquos S (SHV34), Aquos U (SHV37_u) feat(device) detect brand Kyocera models: Easy Mobile Phone (KYF32), Marvera (KYF35) feat(device) detect brand Panasonic models: P-smart Keitai (P-01J) feat(device) detect brand Ulefone models: P-smart Armor 6E

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -7354,7 +7354,7 @@ K-Touch:
 
 # kyocera (kyocera.co.jp, kyocera.com)
 Kyocera:
-  regex: 'Kyocera|KWC-|QC-|(?:NP501KC|503KC|602KC|705KC|C51[27]0|C5155|C5215|C67[35]0|C6522N?|C6530N|C6740N?|C6743|E6[89]10|KYL2[13]|KYV3[13-9]|KYT3[123]|KYF3[179]|KYY2[1-4]|S2151|KC-S701|S4-KC|KYV40U?|KYV4[1-8]|KYV4[47][-_]u|KC-S301AE|X3-KC|S6-KC|E6560[CT]|E6782[L]?|E6790(?:TM)?|704KC)(?:[);/ ]|$)'
+  regex: 'Kyocera|KWC-|QC-|(?:NP501KC|503KC|602KC|705KC|C51[27]0|C5155|C5215|C67[35]0|C6522N?|C6530N|C6740N?|C6743|E6[89]10|KYL2[13]|KYV3[13-9]|KYT3[123]|KYF3[12579]|KYY2[1-4]|S2151|KC-S701|S4-KC|KYV40U?|KYV4[1-8]|KYV4[47][-_]u|KC-S301AE|X3-KC|S6-KC|E6560[CT]|E6782[L]?|E6790(?:TM)?|704KC)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     # explicit smartphone models
@@ -7408,6 +7408,10 @@ Kyocera:
       model: 'Miraie'
     - regex: 'KYY24(?:[);/ ]|$)'
       model: 'Torque G01'
+    - regex: 'KYF32(?:[);/ ]|$)'
+      model: 'Easy Mobile Phone'
+    - regex: 'KYF35(?:[);/ ]|$)'
+      model: 'Marvera'
     - regex: 'KYF3[179](?:[);/ ]|$)'
       model: 'Gratina 4G'
     - regex: 'KYV48(?:[);/ ]|$)'
@@ -10444,9 +10448,11 @@ Panacom:
 
 # panasonic
 Panasonic:
-  regex: 'Panasonic|PANATV[0-9]+|Viera/|(?:P902i|P-08D|FZ-B2D|FZ-[NX]1)(?:[);/ ]|$)|Eluga[ _]|P55 Novo 4G|DMC-CM1'
+  regex: 'Panasonic|PANATV[0-9]+|Viera/|(?:P902i|P-08D|FZ-B2D|FZ-[NX]1|DMC-CM1|P-01J)(?:[);/ ]|$)|Eluga[ _]|P55 Novo 4G'
   device: 'smartphone'
   models:
+    - regex: 'P-01J(?:[);/ ]|$)'
+      model: 'P-smart Keitai'
     - regex: 'Eluga[ _-]([^;/]+) Build'
       model: 'Eluga $1'
     - regex: 'Eluga[ _-]([^;/]+)(?:[;/)]|$)'
@@ -12587,7 +12593,7 @@ Spice:
 
 # Sharp (jp.sharp)
 Sharp:
-  regex: 'SHARP|SBM|SH-?[0-9]+[a-z]?(?:[);/ ]|$)|AQUOS|(?:SH-M0[45789]|SH-M1[123]|S[357]-SH|SH-Z(10|01)|SH-[CL]02|SH-RM1[12]|404SH|[45]02SH|[36]05SH|70[1246]SH|80[138]SH|90[178]SH|50[3679]SH|SHL22|SHV4[0-8]|SHV3[135689]|FS80(?:1[08]|32|28|0[29])|TG-L900S|NP601SH|603SH|SHV4[035][-_]u|SW001SH|SHG01)(?:[);/ ]|$)'
+  regex: 'SHARP|SBM|SH-?[0-9]+[a-z]?(?:[);/ ]|$)|AQUOS|(?:SH-M0[45789]|SH-M1[123]|S[357]-SH|SH-Z(10|01)|SH-[CL]02|SH-RM1[12]|404SH|[45]02SH|[36]05SH|70[1246]SH|80[138]SH|90[1678]SH|50[3679]SH|SHL22|SHV4[0-8]|SHV3[13-9](?:[-_]u)?|FS80(?:1[08]|32|28|0[29])|TG-L900S|NP601SH|603SH|SHV4[035][-_]u|SW001SH|SHG01)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     # explicit smartphone models
@@ -12617,7 +12623,7 @@ Sharp:
       model: 'Aquos S3 Dual SIM'
     - regex: '(?:SH-Z10|801SH)(?:[);/ ]|$)'
       model: 'Aquos zero'
-    - regex: 'SH-M13(?:[);/ ]|$)'
+    - regex: '(?:SH-M13|906SH)(?:[);/ ]|$)'
       model: 'Aquos Zero 2'
     - regex: 'SH-Z01(?:[);/ ]|$)'
       model: 'Aquos S2 (C10)'
@@ -12629,6 +12635,8 @@ Sharp:
       model: 'Aquos Phone SHL22'
     - regex: 'SH-L02(?:[);/ ]|$)'
       model: 'Aquos L2'
+    - regex: '(?:605SH|SH-03J|SHV39)(?:[);/ ]|$)'
+      model: 'Aquos R'
     - regex: '(?:605SH|SH-03J|SHV39)(?:[);/ ]|$)'
       model: 'Aquos R'
     - regex: '(?:701SH|SHV41)(?:[);/ ]|$)'
@@ -12655,7 +12663,7 @@ Sharp:
       model: 'Aquos 3'
     - regex: 'NP601SH(?:[);/ ]|$)'
       model: 'Aquos 2'
-    - regex: 'SHV40(?:_u)?(?:[);/ ]|$)'
+    - regex: '(?:SHV40|SHV34)(?:_u)?(?:[);/ ]|$)'
       model: 'Aquos S'
     - regex: '702SH(?:[);/ ]|$)'
       model: 'Aquos S Basic'
@@ -12677,7 +12685,7 @@ Sharp:
       model: 'Aquos S3 Lite'
     - regex: 'SH-51A(?:[);/ ]|$)'
       model: 'Aquos R5G'
-    - regex: 'SHV35(?:[);/ ]|$)'
+    - regex: 'SHV3[57](?:_u)?(?:[);/ ]|$)'
       model: 'Aquos U'
     - regex: 'TG-L900S(?:[);/ ]|$)'
       model: 'Luna S'
