feat(device) detect brand Realme models: 5 Pro RMX1973, X50 Pro 5G (RMX2076) feat(device) detect brand Samsung models: GALAXY M31s (SM-M317F)

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -9972,7 +9972,7 @@ OnePlus:
 
 # Realme (sub brand Oppo)
 Realme:
-  regex: '(?:RMX(?:19(03|4[1235]|19|9[23]|2[157]|[01379]1)|20(?:[025-7]1|[037]2|2[57]|63|86|[234]0)|21(?:[12]1|42|76|8[059])|2200|18(0[1579]|11|3[13]|2[157]|[45]1|45))|(?:OPPO[ _]?)?CPH1861)(?:[);/ ]|$)'
+  regex: '(?:RMX(?:19(03|4[1235]|19|9[23]|2[157]|[01379]1|73)|20(?:[025-7]1|[037]2|2[57]|63|76|86|[234]0)|21(?:[12]1|42|76|8[059])|2200|18(0[1579]|11|3[13]|2[157]|[45]1|45))|(?:OPPO[ _]?)?CPH1861)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: '(?:OPPO[ _]?)?CPH1861(?:[);/ ]|$)'
@@ -10003,7 +10003,7 @@ Realme:
       model: 'XT'
     - regex: 'RMX19(1[19]|27)'
       model: '5'
-    - regex: 'RMX1971'
+    - regex: 'RMX197[13]'
       model: '5 Pro'
     - regex: 'RMX203[02]'
       model: '5i'
@@ -10035,6 +10035,8 @@ Realme:
       model: 'X50 5G'
     - regex: 'RMX2071(?:[);/ ]|$)'
       model: 'X50 Pro'
+    - regex: 'RMX2076(?:[);/ ]|$)'
+      model: 'X50 Pro 5G'
     - regex: 'RMX2072(?:[);/ ]|$)'
       model: 'X50 Pro Player'
     - regex: 'RMX2142(?:[);/ ]|$)'
@@ -11658,6 +11660,8 @@ Samsung:
       model: 'GALAXY M30'
     - regex: '(?:SAMSUNG-)?SM-M315F'
       model: 'GALAXY M31'
+    - regex: '(?:SAMSUNG-)?SM-M317F'
+      model: 'GALAXY M31s'
     - regex: '(?:SAMSUNG-)?SM-M405'
       model: 'GALAXY M40'
     - regex: '(?:SAMSUNG-)?SM-W201([689])'
