--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,11 @@
 language: php
 
 php:
-  - 7.1
   - 7.2
   - 7.3
-  - 7.4snapshot
+  - 7.4
 
-dist: xenial
+dist: bionic
 
 sudo: false
 
@@ -30,14 +29,17 @@ script: vendor/bin/phpunit --no-coverage
 
 jobs:
   allow_failures:
-    - php: 7.4snapshot
     - php: nightly
   include:
     - php: nightly
       install: travis_retry composer install --ignore-platform-reqs
+      before_install:
+        - phpenv config-rm xdebug.ini || echo "xdebug not available"
+        - (composer self-update; true)
+        - composer require doctrine/cache ~1.2  --ignore-platform-reqs
 
     - stage: test with coverage
-      php: 7.1
+      php: 7.2
       before_install:
         - (composer self-update; true)
         - composer require doctrine/cache ~1.2
@@ -46,10 +48,10 @@ jobs:
       after_success: wget https://github.com/php-coveralls/php-coveralls/releases/download/v2.1.0/php-coveralls.phar && php -n php-coveralls.phar --verbose --coverage_clover=build/logs/clover.xml
 
     - stage: style check
-      php: 7.1
+      php: 7.2
       script: php -n -d memory_limit=768M vendor/bin/phpcs --colors --standard=phpcs.xml .
 
     - stage: static code analysis
       os: linux
-      php: 7.1
+      php: 7.2
       script: vendor/bin/phpstan analyse -c phpstan.neon --memory-limit=768M --no-interaction --no-progress .
