--- a/phpstan.neon
+++ b/phpstan.neon
@@ -1,6 +1,7 @@
 parameters:
     level: max
-    bootstrap: %rootDir%/../../autoload.php
+    bootstrapFiles:
+        - %rootDir%/../../autoload.php
     paths:
         - %rootDir%/../../../
     excludes_analyse:
@@ -11,3 +12,4 @@ parameters:
     ignoreErrors:
         - '#.+Doctrine\\Common\\Cache\\CacheProvider.+#'
     reportUnmatchedIgnoredErrors: false
+    checkMissingIterableValueType: false
