--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,7 @@
         "psr/simple-cache": "^1.0.1",
         "matthiasmullie/scrapbook": "@stable",
         "phpstan/phpstan": "^0.12.52",
-        "mayflower/mo4-coding-standard" : "^5.0.0",
+        "mayflower/mo4-coding-standard" : "dev-master",
         "symfony/yaml": "^5.1.7"
     },
     "suggest": {
