--- a/Tests/fixtures/feed_reader.yml
+++ b/Tests/fixtures/feed_reader.yml
@@ -144,7 +144,7 @@
     model: iPad
   os_family: iOS
   browser_family: Unknown
--
+- 
   user_agent: Mozilla/5.0 (Windows NT 6.1) AppleWebKit/602.1 (KHTML, like Gecko) QuiteRSS/0.18.12 Safari/602.1
   os:
     name: Windows
@@ -156,7 +156,7 @@
     name: QuiteRSS
     version: "0.18.12"
   device:
-    type: "desktop"
+    type: desktop
     brand: ""
     model: ""
   os_family: Windows
