--- a/Tests/Parser/Client/fixtures/browser.yml
+++ b/Tests/Parser/Client/fixtures/browser.yml
@@ -494,7 +494,7 @@
     version: "1.2.6"
     engine: Gecko
     engine_version: "1.6"
--
+- 
   user_agent: Mozilla/5.0 (X11; U; Linux i686; fr-fr) AppleWebKit/531.2+ (KHTML, like Gecko) Version/5.0 Safari/531.2+ Debian/squeeze (2.30.6-1) Epiphany/2.30.6
   client:
     type: browser
@@ -2222,7 +2222,7 @@
     version: "3.7.22"
     engine: Gecko
     engine_version: "42.0"
--
+- 
   user_agent: Mozilla/5.0 (Linux; U; COS like Android 4.1.2; zh_CN; 909d Build/JRO03C) AppleWebKit/537.17 (KHTML, like Gecko) COSBrowser/1.0.0 Version/4.0 Mobile Safari/537.17
   client:
     type: browser
@@ -2231,7 +2231,7 @@
     version: "1.0.0"
     engine: WebKit
     engine_version: "537.17"
--
+- 
   user_agent: Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/537.36 (KHTML, like Gecko) QtWebEngine/5.10.1 Chrome/61.0.3163.140 Crusta/1.4.3 Safari/537.36
   client:
     type: browser
@@ -2258,7 +2258,7 @@
     version: "1.7.9.900"
     engine: WebKit
     engine_version: "537.36"
--
+- 
   user_agent: Mozilla/5.0 (Windows NT 6.1) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/44.0.2403.157 UBrowser/5.5.5701.114 Safari/537.36
   client:
     type: browser
@@ -2267,16 +2267,16 @@
     version: "5.5.5701.114"
     engine: WebKit
     engine_version: "537.36"
--
-  user_agent: Mozilla/5.0 (Linux; U; Android 2.3.5; zh-cn; SHP-SH330T/V03.03; 320*480; CTC/2.0) eZBrowser/1.0
+- 
+  user_agent: 'Mozilla/5.0 (Linux; U; Android 2.3.5; zh-cn; SHP-SH330T/V03.03; 320*480; CTC/2.0) eZBrowser/1.0'
   client:
     type: browser
     name: eZ Browser
     short_name: EZ
     version: "1.0"
-    engine: 
+    engine: ""
     engine_version: ""
--
+- 
   user_agent: Mozilla/5.0 (Linux; U; Android 6.0.1;en_gb; C103 Build/ZIXOSOP5801803011S) AppleWebKit/537.36 (KHTML, like Gecko)Version/4.0 Chrome/49.0.0.0 Mobile Safari/537.36 EUI Browser/5.8.018S
   client:
     type: browser
@@ -2303,7 +2303,7 @@
     version: "11.0.1001.0327"
     engine: WebKit
     engine_version: "537.36"
--
+- 
   user_agent: Mozilla/5.0 (Windows NT 10.0; WOW64; rv:68.0) Gecko/20100101 Firefox/68.0 TO-Browser/TOB7.68.0.201_01
   client:
     type: browser
@@ -2312,7 +2312,7 @@
     version: "7.68.0.201"
     engine: Gecko
     engine_version: "68.0"
--
+- 
   user_agent: Mozilla/5.0 (Linux; Android 7.0; SO-01H Build/32.3.E.0.136; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/64.0.3282.137 Mobile Safari/537.36 Sleipnir/3.5.7
   client:
     type: browser
@@ -2328,10 +2328,10 @@
     name: SimpleBrowser
     short_name: S1
     version: ""
-    engine: 
+    engine: ""
     engine_version: ""
--
-  user_agent: Uzbl (Webkit 1.3) (Linux i686 [i686])
+- 
+  user_agent: 'Uzbl (Webkit 1.3) (Linux i686 [i686])'
   client:
     type: browser
     name: Uzbl
@@ -2339,7 +2339,7 @@
     version: ""
     engine: WebKit
     engine_version: "1.3"
--
+- 
   user_agent: Mozilla/5.0 (Windows NT 10.0; WOW64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/75.0.3770.142 Safari/537.36 CCleaner/75.1.103.145
   client:
     type: browser
@@ -2348,7 +2348,7 @@
     version: "75.1.103.145"
     engine: WebKit
     engine_version: "537.36"
--
+- 
   user_agent: Mozilla/5.0 (Linux; Android 8.1.0; DUB-AL20 Build/HUAWEIDUB-AL20; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/78.0.3904.108 Mobile Safari/537.36 AlohaLite/1.4.0.1 AlohaBrowser/2.9.0.1
   client:
     type: browser
@@ -2357,7 +2357,7 @@
     version: "1.4.0.1"
     engine: WebKit
     engine_version: "537.36"
--
+- 
   user_agent: Mozilla/5.0 (Windows NT 6.1) AppleWebKit/536.11 (KHTML, like Gecko) Chrome/20.0.1132.11 TaoBrowser/3.1 Safari/536.11
   client:
     type: browser
@@ -2366,7 +2366,7 @@
     version: "3.1"
     engine: WebKit
     engine_version: "536.11"
--
+- 
   user_agent: Mozilla/5.0 (Windows NT 6.2; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Falkon/3.1.0 Chrome/69.0.3497.128 Safari/537.36
   client:
     type: browser
@@ -2375,7 +2375,7 @@
     version: "3.1.0"
     engine: WebKit
     engine_version: "537.36"
--
+- 
   user_agent: Mozilla/5.0 (Linux; Android 5.1.1; HW-SCL-L32 Build/HW-SCL-L32) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/59.0.3071.125 Mobile Safari/537.36 mCent/0.13.1027
   client:
     type: browser
@@ -2384,7 +2384,7 @@
     version: "0.13.1027"
     engine: WebKit
     engine_version: "537.36"
--
+- 
   user_agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64) SalamWeb/3.0.1.592 AppleWebKit/537.36 (KHTML, like Gecko) Chrome/75.0.3770.101 Safari/537.36
   client:
     type: browser
@@ -2393,7 +2393,7 @@
     version: "3.0.1.592"
     engine: WebKit
     engine_version: "537.36"
--
+- 
   user_agent: Mozilla/5.0 (Windows NT 10.0; WOW64; rv:25.3) Gecko/20150425 BlackHawk/25.3.1
   client:
     type: browser
@@ -2411,7 +2411,7 @@
     version: "0.020"
     engine: Gecko
     engine_version: "1.8.1.5"
--
+- 
   user_agent: Mozilla/5.0 (Linux; Android 4.4; Moto 360 Build/KNX01S) AppleWebKit/537.36 (KHTML, like Gecko) WIB/0.9.8 Mobile Safari/537.36
   client:
     type: browser
@@ -2420,7 +2420,7 @@
     version: "0.9.8"
     engine: WebKit
     engine_version: "537.36"
--
+- 
   user_agent: Mozilla/5.0 (compatible; Origyn Web Browser; MorphOS; PPC; U) AppleWebKit/528.5+ (KHTML, like Gecko, Safari/528.5+)
   client:
     type: browser
@@ -2429,7 +2429,7 @@
     version: ""
     engine: WebKit
     engine_version: "528.5"
--
+- 
   user_agent: Mozilla/5.0 (Windows NT 6.1) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/67.0.3396.99 Safari/537.36 Kinza/4.8.2
   client:
     type: browser
@@ -2438,7 +2438,7 @@
     version: "4.8.2"
     engine: WebKit
     engine_version: "537.36"
--
+- 
   user_agent: Mozilla/5.0 (Windows NT 6.1; WOW64) AppleWebKit/535.8 (KHTML like Gecko) Beamrise/17.2.0.9 Chrome/17.0.939.0 Safari/535.8
   client:
     type: browser
@@ -2447,16 +2447,16 @@
     version: "17.2.0.9"
     engine: WebKit
     engine_version: "535.8"
--
+- 
   user_agent: Faux/20151018 CFNetwork/808.1.4 Darwin/16.1.0
   client:
     type: browser
     name: Faux Browser
     short_name: FX
     version: "20151018"
-    engine: 
+    engine: ""
     engine_version: ""
--
+- 
   user_agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/77.0.4000.0 Iron Safari/537.36
   client:
     type: browser
@@ -2474,7 +2474,7 @@
     version: "10.0"
     engine: WebKit
     engine_version: "602.1"
--
+- 
   user_agent: Mozilla/5.0 (Linux; U; Android 6.0; zh-CN; MZ-M5c Build/MRA58K) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/40.0.2214.89 MZBrowser/6.9.410-2017122215 UWS/2.11.0.33 Mobile Safari/537.36
   client:
     type: browser
@@ -2492,7 +2492,7 @@
     version: "77.2.2156.122"
     engine: WebKit
     engine_version: "537.36"
--
+- 
   user_agent: Mozilla/5.0 (Linux; Android 6.0; Zun X Build/MRA58K) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/53.0.2785.97 Mobile Safari/537.36 Start/53.0.2785.97
   client:
     type: browser
@@ -2501,7 +2501,7 @@
     version: "53.0.2785.97"
     engine: WebKit
     engine_version: "537.36"
--
+- 
   user_agent: Mozilla/5.0 (Windows NT 6.1) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/54.0.2840.87 Safari/537.36 Lovense/20.0.1
   client:
     type: browser
@@ -2510,7 +2510,7 @@
     version: "20.0.1"
     engine: WebKit
     engine_version: "537.36"
--
+- 
   user_agent: com.airfind.deltabrowser/2.0.8.2 (Linux; U; Android 8.0.0; en-us; LGUS997 Build/OPR1.170623.032; lge) 1440X2672 LGE LGUS997 AppleWebKit/537.36 (KHTML, like Gecko)
   client:
     type: browser
@@ -2528,7 +2528,7 @@
     version: ""
     engine: Gecko
     engine_version: "66.0"
--
+- 
   user_agent: TV Bro/1.0 Mozilla/5.0 (Linux; Android 8.1.0; MIBOX4 Build/OPM1.171019.011; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/78.0.3904.96 Safari/537.36
   client:
     type: browser
@@ -2537,7 +2537,7 @@
     version: "1.0"
     engine: WebKit
     engine_version: "537.36"
--
+- 
   user_agent: Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/605.1.15 (KHTML, like Gecko) Version/13.0 Safari/605.1.15 Surf/2.0
   client:
     type: browser
@@ -2591,7 +2591,7 @@
     version: "49.0"
     engine: Gecko
     engine_version: "49.0"
--
+- 
   user_agent: Mozilla/5.0 (Linux; U; X11; en-US; Valve Steam GameOverlay/1586022601; ) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/79.0.3945.117 Safari/537.36
   client:
     type: browser
@@ -2618,7 +2618,7 @@
     version: "4.58.2552.909"
     engine: WebKit
     engine_version: "537.36"
--
+- 
   user_agent: Mozilla/5.0 (Windows NT 6.2; WOW64; rv:52.9) Gecko/20100101 Goanna/3.4 Firefox/52.9 ArcticFox/27.9.19
   client:
     type: browser
@@ -2627,7 +2627,7 @@
     version: "27.9.19"
     engine: Goanna
     engine_version: "3.4"
--
+- 
   user_agent: Mozilla/5.0 (Windows NT 6.2; Win64; x64; rv:68.9) Gecko/20100101 Goanna/4.5 Firefox/68.9 Mypal/28.9.0
   client:
     type: browser
@@ -2636,7 +2636,7 @@
     version: "28.9.0"
     engine: Goanna
     engine_version: "4.5"
--
+- 
   user_agent: Mozilla/5.0 (Windows NT 6.3; WOW64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/78.0.3904.108 Atom/6.3.0.4 Safari/537.36
   client:
     type: browser
@@ -2645,7 +2645,7 @@
     version: "6.3.0.4"
     engine: WebKit
     engine_version: "537.36"
--
+- 
   user_agent: Mozilla/5.0 (Windows NT 10.0; WOW64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/62.0.3202.94 Safari/537.36 115Browser/12.0.0
   client:
     type: browser
@@ -2654,7 +2654,7 @@
     version: "12.0.0"
     engine: WebKit
     engine_version: "537.36"
--
+- 
   user_agent: Mozilla/5.0 (Windows NT 10.0; WOW64; rv:52.0) Gecko/20100101 Firefox/52.0 SEB/2.4
   client:
     type: browser
@@ -2672,7 +2672,7 @@
     version: "1.16.0"
     engine: WebKit
     engine_version: "537.36"
--
+- 
   user_agent: Mozilla/5.0 (Windows NT 10.0; WOW64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/67.0.3390.0 Xvast/1.1.0.8 Safari/537.36
   client:
     type: browser
@@ -2681,7 +2681,7 @@
     version: "1.1.0.8"
     engine: WebKit
     engine_version: "537.36"
--
+- 
   user_agent: Mozilla/5.0 (Windows NT 10.0; WOW64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/71.0.3578.98 Safari/537.36 TungstenBrowser/2.1
   client:
     type: browser
@@ -2690,7 +2690,7 @@
     version: "2.1"
     engine: WebKit
     engine_version: "537.36"
--
+- 
   user_agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Lulumi-browser/1.3.2 Chrome/58.0.3029.110 Electron/1.7.4 Safari/537.36
   client:
     type: browser
@@ -2699,7 +2699,7 @@
     version: "1.3.2"
     engine: WebKit
     engine_version: "537.36"
--
+- 
   user_agent: Mozilla/5.0 (iPhone; CPU iPhone OS 12_0 like Mac OS X) AppleWebKit/605.1.15 (KHTML, like Gecko) Version/12.0 Mobile/16A366 Safari/9537.53 YJApp-IOS jp.co.yahoo.YBrowser/1.0.20.0
   client:
     type: browser
@@ -2717,7 +2717,7 @@
     version: "1.6.9.1"
     engine: WebKit
     engine_version: "537.36"
--
+- 
   user_agent: Mozilla/5.0 (iPhone; CPU iPhone OS 9_3_4 like Mac OS X) AppleWebKit/601.1.46 (KHTML, like Gecko) Mobile/13G35 Safari/6533.18.5 iLunascape/3251
   client:
     type: browser
@@ -2726,7 +2726,7 @@
     version: "3251"
     engine: WebKit
     engine_version: "601.1.46"
--
+- 
   user_agent: Mozilla/5.0 (iPad; U; CPU OS 4_2_1 like Mac OS X; ja-jp) AppleWebKit/533.17.9 (KHTML. like Gecko) Mobile/8C148 Safari/6533.18.5 iLunascapeLite/3.2.1
   client:
     type: browser
@@ -2735,7 +2735,7 @@
     version: "3.2.1"
     engine: WebKit
     engine_version: "533.17.9"
--
+- 
   user_agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Polypane/2.1.2 Chrome/78.0.3904.130 Electron/7.1.12 Safari/537.36
   client:
     type: browser
@@ -2744,7 +2744,7 @@
     version: "2.1.2"
     engine: WebKit
     engine_version: "537.36"
--
+- 
   user_agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) OhHaiBrowser/3.3.0 Chrome/69.0.3497.106 Electron/4.0.4 Safari/537.36
   client:
     type: browser
@@ -2753,7 +2753,7 @@
     version: "3.3.0"
     engine: WebKit
     engine_version: "537.36"
--
+- 
   user_agent: Mozilla/5.0 (iPhone; CPU iPhone OS 9_3_4 like Mac OS X) AppleWebKit/601.1.46 (KHTML, like Gecko) Mobile/13G35 JigBrowserPlus/1.8.2
   client:
     type: browser
@@ -2762,7 +2762,7 @@
     version: "1.8.2"
     engine: WebKit
     engine_version: "601.1.46"
--
+- 
   user_agent: Mozilla/5.0 (Linux; Android 6.0.1; SM-N910F Build/MMB29M) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/53.0.2785.143 Crosswalk/23.53.589.2 Mobile Safari/537.36 QwantMobile/1.1
   client:
     type: browser
@@ -2771,7 +2771,7 @@
     version: "1.1"
     engine: Gecko
     engine_version: ""
--
+- 
   user_agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Sizzy/0.0.21 Chrome/73.0.3683.121 Electron/5.0.2 Safari/537.36
   client:
     type: browser
@@ -2780,7 +2780,7 @@
     version: "0.0.21"
     engine: WebKit
     engine_version: "537.36"
--
+- 
   user_agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) GlassBrowser/0.5.0 Chrome/56.0.2924.87 Electron/1.6.15 Safari/537.36
   client:
     type: browser
@@ -2789,7 +2789,7 @@
     version: "0.5.0"
     engine: WebKit
     engine_version: "537.36"
--
+- 
   user_agent: Mozilla/5.0 (Windows NT 10.0; WOW64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/49.0.2623.75 Safer/49.0.79.75 Safari/537.36
   client:
     type: browser
@@ -2798,7 +2798,7 @@
     version: "49.0.79.75"
     engine: WebKit
     engine_version: "537.36"
--
+- 
   user_agent: Mozilla/5.0 (X11 TOS; Linux x86_64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/72.0.3626.109 ToGate/72.0.3626.109 Safari/537.36
   client:
     type: browser
@@ -2807,7 +2807,7 @@
     version: "72.0.3626.109"
     engine: WebKit
     engine_version: "537.36"
--
+- 
   user_agent: Mozilla/5.0 (Linux; Android 6.0.1; 6055P Build/MMB29M; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/63.0.3239.111 Mobile Safari/537.36 bdbrowser/1.9.0.2
   client:
     type: browser
@@ -2816,25 +2816,25 @@
     version: "1.9.0.2"
     engine: WebKit
     engine_version: "537.36"
--
+- 
   user_agent: Mozilla/5.0 (Windows NT 6.1; WOW64; rv:18.0) Gecko/20130204 Zvu/18.0.1
   client:
     type: browser
     name: Zvu
     short_name: ZV
-    version: 18.0.1
+    version: "18.0.1"
     engine: Gecko
     engine_version: "18.0"
-
-- user_agent: Mozilla/5.0 (Linux; U; Android 10; zh-Hans-CN; CDY-TN00 Build/HUAWEICDY-TN00) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/57.0.2987.108 Quark/4.1.2.133 Mobile Safari/537.36
+- 
+  user_agent: Mozilla/5.0 (Linux; U; Android 10; zh-Hans-CN; CDY-TN00 Build/HUAWEICDY-TN00) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/57.0.2987.108 Quark/4.1.2.133 Mobile Safari/537.36
   client:
     type: browser
     name: Quark
     short_name: QU
-    version: 4.1.2.133
+    version: "4.1.2.133"
     engine: WebKit
     engine_version: "537.36"
--
+- 
   user_agent: Mozilla/5.0 (Android 8.1.0; Xiaomi Redmi Note 6 Pro) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/30.0.0.0 Mobile Safari/537.36 BlueBrowser/3.0
   client:
     type: browser
@@ -2843,21 +2843,21 @@
     version: "3.0"
     engine: WebKit
     engine_version: "537.36"
--
+- 
   user_agent: Mozilla/5.0 (Android 8.0.0; SM-J330F Build/R16NW) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/65.0.3317.0 YaaniBrowser/4.3.0.153 (Turkcell-TR) Mobile Safari/537.36
   client:
     type: browser
     name: Yaani Browser
     short_name: YN
-    version: 4.3.0.153
+    version: "4.3.0.153"
     engine: Blink
     engine_version: ""
--
+- 
   user_agent: GOGGalaxyClient/2.0.20.39 (GOG Galaxy) 83b6745cff679691b69876bc7ee33e05e5d90bda (win10 x64)
   client:
     type: browser
     name: GOG Galaxy
     short_name: GO
-    version: 2.0.20.39
-    engine: ''
-    engine_version: ''
+    version: "2.0.20.39"
+    engine: ""
+    engine_version: ""
