--- a/Tests/fixtures/mobile_apps.yml
+++ b/Tests/fixtures/mobile_apps.yml
@@ -458,7 +458,7 @@
     model: ""
   os_family: Android
   browser_family: Unknown
--
+- 
   user_agent: com.google.android.apps.searchlite/101032 (Linux; U; Android 8.1.0; ru_RU; M580; Build/O11019; Cronet/74.0.3729.182)
   os:
     name: Android
@@ -475,7 +475,7 @@
     model: ""
   os_family: Android
   browser_family: Unknown
--
+- 
   user_agent: CastBox/4.8.1 (fm.castbox.audiobook.radio.podcast; build:2; iOS 11.2.5)
   os:
     name: iOS
@@ -492,7 +492,7 @@
     model: ""
   os_family: iOS
   browser_family: Unknown
--
+- 
   user_agent: Mozilla/5.0 (Android OS 5.1 / API-22 (HUAWEITIT-U02/C579B105); HUAWEI HUAWEI TIT-U02) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/76.0.3809.89 Mobile Safari/537.36 UnityPlayer/2017.4.34f1
   os:
     name: Android
@@ -509,7 +509,7 @@
     model: Y6 Pro
   os_family: Android
   browser_family: Unknown
--
+- 
   user_agent: Mozilla/5.0 (Linux; Android 10; SM-T515 Build/QP1A.190711.020; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/84.0.4147.125 Safari/537.36 UCURSOS/v1.6_244-android
   os:
     name: Android
@@ -526,7 +526,7 @@
     model: GALAXY Tab A 10.1" (2019)
   os_family: Android
   browser_family: Unknown
--
+- 
   user_agent: Mozilla/5.0 (Linux; U; Android 10; zh-cn; PDEM10 Build/QKQ1.191222.002) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/70.0.3538.80 Mobile Safari/537.36 HeyTapBrowser/40.7.4.1
   os:
     name: Android
@@ -543,8 +543,8 @@
     model: Find X2
   os_family: Android
   browser_family: Unknown
--
-  user_agent: Mozilla/5.0 (2822MB; 720x1411; 320x319; 411x806; Samsung SM-A115F; 10) AppleWebKit/537.36 (KHTML, like Gecko)  ROBLOX Android App 2.448.411159 Phone Hybrid()  GooglePlayStore RobloxApp/2.448.411159 (GlobalDist; GooglePlayStore)
+- 
+  user_agent: 'Mozilla/5.0 (2822MB; 720x1411; 320x319; 411x806; Samsung SM-A115F; 10) AppleWebKit/537.36 (KHTML, like Gecko)  ROBLOX Android App 2.448.411159 Phone Hybrid()  GooglePlayStore RobloxApp/2.448.411159 (GlobalDist; GooglePlayStore)'
   os:
     name: Android
     short_name: AND
@@ -560,7 +560,7 @@
     model: GALAXY A11
   os_family: Android
   browser_family: Unknown
--
+- 
   user_agent: Mozilla/5.0 (iPhone; iPhone12,1; CPU iPhone OS 14.0 like Mac OS X) AppleWebKit/534.46 (KHTML, like Gecko) Mobile/9B176 ROBLOX iOS App 2.448.411159 Hybrid RobloxApp/2.448.411159 (GlobalDist; AppleAppStore)
   os:
     name: iOS
