--- a/Tests/fixtures/smartphone-17.yml
+++ b/Tests/fixtures/smartphone-17.yml
@@ -2728,12 +2728,12 @@
   os:
     name: Android
     short_name: AND
-    version: 4.4.2
+    version: "4.4.2"
     platform: ""
   client:
     type: mediaplayer
     name: Deezer
-    version: 5.4.22.54
+    version: "5.4.22.54"
   device:
     type: smartphone
     brand: LM
@@ -2750,7 +2750,7 @@
   client:
     type: mediaplayer
     name: Deezer
-    version: 5.4.19.9
+    version: "5.4.19.9"
   device:
     type: smartphone
     brand: M0
@@ -2762,12 +2762,12 @@
   os:
     name: Android
     short_name: AND
-    version: 7.1.1
+    version: "7.1.1"
     platform: ""
   client:
     type: mediaplayer
     name: Deezer
-    version: 5.4.22.54
+    version: "5.4.22.54"
   device:
     type: smartphone
     brand: N2
@@ -2784,7 +2784,7 @@
   client:
     type: mediaplayer
     name: Deezer
-    version: 5.4.22.54
+    version: "5.4.22.54"
   device:
     type: smartphone
     brand: OE
@@ -2796,13 +2796,13 @@
   os:
     name: Android
     short_name: AND
-    version: 5.0.2
+    version: "5.0.2"
     platform: ""
   client:
     type: browser
     name: Chrome Mobile
     short_name: CM
-    version: 67.0.3396.87
+    version: "67.0.3396.87"
     engine: Blink
     engine_version: ""
   device:
@@ -2816,12 +2816,12 @@
   os:
     name: Android
     short_name: AND
-    version: 7.1.1
+    version: "7.1.1"
     platform: ""
   client:
     type: mobile app
     name: Google Search App
-    version: 8.7.11.21
+    version: "8.7.11.21"
   device:
     type: desktop
     brand: AC
@@ -2833,13 +2833,13 @@
   os:
     name: Android
     short_name: AND
-    version: 8.1.0
+    version: "8.1.0"
     platform: ARM
   client:
     type: browser
     name: Yandex Browser
     short_name: YA
-    version: 19.7.3.91.00
+    version: "19.7.3.91.00"
     engine: Blink
     engine_version: ""
   device:
@@ -2853,13 +2853,13 @@
   os:
     name: Android
     short_name: AND
-    version: 8.1.0
+    version: "8.1.0"
     platform: ARM
   client:
     type: browser
     name: Yandex Browser
     short_name: YA
-    version: 19.10.1.100.00
+    version: "19.10.1.100.00"
     engine: Blink
     engine_version: ""
   device:
@@ -2873,13 +2873,13 @@
   os:
     name: Android
     short_name: AND
-    version: 8.0.0
+    version: "8.0.0"
     platform: ""
   client:
     type: browser
     name: Chrome Mobile
     short_name: CM
-    version: 85.0.4183.127
+    version: "85.0.4183.127"
     engine: Blink
     engine_version: ""
   device:
@@ -2893,13 +2893,13 @@
   os:
     name: Android
     short_name: AND
-    version: 8.0.0
+    version: "8.0.0"
     platform: ""
   client:
     type: browser
     name: Chrome Mobile
     short_name: CM
-    version: 85.0.4183.101
+    version: "85.0.4183.101"
     engine: Blink
     engine_version: ""
   device:
@@ -2919,7 +2919,7 @@
     type: browser
     name: Chrome
     short_name: CH
-    version: 81.0.4044.138
+    version: "81.0.4044.138"
     engine: Blink
     engine_version: ""
   device:
@@ -2933,13 +2933,13 @@
   os:
     name: Android
     short_name: AND
-    version: 5.0.2
+    version: "5.0.2"
     platform: ""
   client:
     type: browser
     name: Chrome
     short_name: CH
-    version: 43.0.2357.93
+    version: "43.0.2357.93"
     engine: Blink
     engine_version: ""
   device:
@@ -2959,7 +2959,7 @@
     type: browser
     name: Chrome Mobile
     short_name: CM
-    version: 85.0.4183.127
+    version: "85.0.4183.127"
     engine: Blink
     engine_version: ""
   device:
@@ -2973,13 +2973,13 @@
   os:
     name: Android
     short_name: AND
-    version: 7.1.2
+    version: "7.1.2"
     platform: ""
   client:
     type: browser
     name: Chrome Mobile
     short_name: CM
-    version: 85.0.4183.127
+    version: "85.0.4183.127"
     engine: Blink
     engine_version: ""
   device:
@@ -2993,13 +2993,13 @@
   os:
     name: Android
     short_name: AND
-    version: 6.0.1
+    version: "6.0.1"
     platform: ""
   client:
     type: browser
     name: Chrome
     short_name: CH
-    version: 85.0.4183.81
+    version: "85.0.4183.81"
     engine: Blink
     engine_version: ""
   device:
@@ -3019,7 +3019,7 @@
     type: browser
     name: Opera Mobile
     short_name: OM
-    version: 59.1.2926.54067
+    version: "59.1.2926.54067"
     engine: Blink
     engine_version: ""
   device:
@@ -3033,7 +3033,7 @@
   os:
     name: Android
     short_name: AND
-    version: 2.3.3
+    version: "2.3.3"
     platform: ""
   client:
     type: browser
@@ -3053,13 +3053,13 @@
   os:
     name: Android
     short_name: AND
-    version: 6.0.1
+    version: "6.0.1"
     platform: ""
   client:
     type: browser
     name: Chrome Mobile
     short_name: CM
-    version: 85.0.4183.127
+    version: "85.0.4183.127"
     engine: Blink
     engine_version: ""
   device:
@@ -3079,7 +3079,7 @@
     type: browser
     name: Chrome Mobile
     short_name: CM
-    version: 74.0.3729.136
+    version: "74.0.3729.136"
     engine: Blink
     engine_version: ""
   device:
@@ -3099,7 +3099,7 @@
     type: browser
     name: Chrome Mobile
     short_name: CM
-    version: 86.0.4240.99
+    version: "86.0.4240.99"
     engine: Blink
     engine_version: ""
   device:
@@ -3119,7 +3119,7 @@
     type: browser
     name: Chrome Mobile
     short_name: CM
-    version: 85.0.4183.101
+    version: "85.0.4183.101"
     engine: Blink
     engine_version: ""
   device:
@@ -3139,7 +3139,7 @@
     type: browser
     name: Chrome Mobile
     short_name: CM
-    version: 85.0.4183.127
+    version: "85.0.4183.127"
     engine: Blink
     engine_version: ""
   device:
@@ -3159,7 +3159,7 @@
     type: browser
     name: Chrome Mobile
     short_name: CM
-    version: 85.0.4183.101
+    version: "85.0.4183.101"
     engine: Blink
     engine_version: ""
   device:
@@ -3179,7 +3179,7 @@
     type: browser
     name: Chrome Mobile
     short_name: CM
-    version: 85.0.4183.101
+    version: "85.0.4183.101"
     engine: Blink
     engine_version: ""
   device:
@@ -3199,7 +3199,7 @@
     type: browser
     name: Chrome Mobile
     short_name: CM
-    version: 85.0.4183.127
+    version: "85.0.4183.127"
     engine: Blink
     engine_version: ""
   device:
@@ -3213,13 +3213,13 @@
   os:
     name: Android
     short_name: AND
-    version: 4.4.4
+    version: "4.4.4"
     platform: ""
   client:
     type: browser
     name: Chrome Mobile
     short_name: CM
-    version: 81.0.4044.138
+    version: "81.0.4044.138"
     engine: Blink
     engine_version: ""
   device:
@@ -3233,13 +3233,13 @@
   os:
     name: Android
     short_name: AND
-    version: 8.1.0
+    version: "8.1.0"
     platform: ""
   client:
     type: browser
     name: Chrome Mobile
     short_name: CM
-    version: 84.0.4147.125
+    version: "84.0.4147.125"
     engine: Blink
     engine_version: ""
   device:
@@ -3259,7 +3259,7 @@
     type: browser
     name: Chrome Mobile
     short_name: CM
-    version: 85.0.4183.81
+    version: "85.0.4183.81"
     engine: Blink
     engine_version: ""
   device:
@@ -3273,13 +3273,13 @@
   os:
     name: Android
     short_name: AND
-    version: 8.1.0
+    version: "8.1.0"
     platform: ""
   client:
     type: browser
     name: Chrome Mobile
     short_name: CM
-    version: 85.0.4183.81
+    version: "85.0.4183.81"
     engine: Blink
     engine_version: ""
   device:
@@ -3299,7 +3299,7 @@
     type: browser
     name: Chrome Mobile
     short_name: CM
-    version: 86.0.4240.75
+    version: "86.0.4240.75"
     engine: Blink
     engine_version: ""
   device:
@@ -3319,7 +3319,7 @@
     type: browser
     name: Chrome Mobile
     short_name: CM
-    version: 86.0.4240.75
+    version: "86.0.4240.75"
     engine: Blink
     engine_version: ""
   device:
@@ -3339,7 +3339,7 @@
     type: browser
     name: Chrome Mobile
     short_name: CM
-    version: 86.0.4240.75
+    version: "86.0.4240.75"
     engine: Blink
     engine_version: ""
   device:
@@ -3359,7 +3359,7 @@
     type: browser
     name: Chrome Mobile
     short_name: CM
-    version: 85.0.4183.127
+    version: "85.0.4183.127"
     engine: Blink
     engine_version: ""
   device:
@@ -3373,13 +3373,13 @@
   os:
     name: Android
     short_name: AND
-    version: 6.0.1
+    version: "6.0.1"
     platform: ""
   client:
     type: browser
     name: Chrome Mobile
     short_name: CM
-    version: 53.0.2785.124
+    version: "53.0.2785.124"
     engine: Blink
     engine_version: ""
   device:
@@ -3399,7 +3399,7 @@
     type: browser
     name: Chrome Mobile
     short_name: CM
-    version: 85.0.4183.101
+    version: "85.0.4183.101"
     engine: Blink
     engine_version: ""
   device:
@@ -3419,7 +3419,7 @@
     type: browser
     name: Chrome Mobile
     short_name: CM
-    version: 80.0.3987.99
+    version: "80.0.3987.99"
     engine: Blink
     engine_version: ""
   device:
@@ -3439,7 +3439,7 @@
     type: browser
     name: Chrome Mobile
     short_name: CM
-    version: 84.0.4147.125
+    version: "84.0.4147.125"
     engine: Blink
     engine_version: ""
   device:
@@ -3459,7 +3459,7 @@
     type: browser
     name: Chrome Mobile
     short_name: CM
-    version: 85.0.4183.127
+    version: "85.0.4183.127"
     engine: Blink
     engine_version: ""
   device:
@@ -3479,7 +3479,7 @@
     type: browser
     name: Chrome Mobile
     short_name: CM
-    version: 85.0.4183.127
+    version: "85.0.4183.127"
     engine: Blink
     engine_version: ""
   device:
@@ -3493,13 +3493,13 @@
   os:
     name: Android
     short_name: AND
-    version: 8.0.0
+    version: "8.0.0"
     platform: ""
   client:
     type: browser
     name: Chrome Mobile
     short_name: CM
-    version: 86.0.4240.75
+    version: "86.0.4240.75"
     engine: Blink
     engine_version: ""
   device:
@@ -3513,13 +3513,13 @@
   os:
     name: Android
     short_name: AND
-    version: 6.0.1
+    version: "6.0.1"
     platform: ""
   client:
     type: browser
     name: Chrome Mobile
     short_name: CM
-    version: 84.0.4147.125
+    version: "84.0.4147.125"
     engine: Blink
     engine_version: ""
   device:
@@ -3533,13 +3533,13 @@
   os:
     name: Android
     short_name: AND
-    version: 5.1.1
+    version: "5.1.1"
     platform: ""
   client:
     type: browser
     name: Chrome Webview
     short_name: CV
-    version: 39.0.0.0
+    version: "39.0.0.0"
     engine: Blink
     engine_version: ""
   device:
@@ -3553,13 +3553,13 @@
   os:
     name: Android
     short_name: AND
-    version: 5.1.1
+    version: "5.1.1"
     platform: ""
   client:
     type: browser
     name: Chrome Webview
     short_name: CV
-    version: 46.0.2490.76
+    version: "46.0.2490.76"
     engine: Blink
     engine_version: ""
   device:
@@ -3573,13 +3573,13 @@
   os:
     name: Android
     short_name: AND
-    version: 5.1.1
+    version: "5.1.1"
     platform: ""
   client:
     type: browser
     name: Chrome Webview
     short_name: CV
-    version: 55.0.2883.91
+    version: "55.0.2883.91"
     engine: Blink
     engine_version: ""
   device:
@@ -3599,7 +3599,7 @@
     type: browser
     name: Chrome Mobile
     short_name: CM
-    version: 86.0.4240.99
+    version: "86.0.4240.99"
     engine: Blink
     engine_version: ""
   device:
@@ -3618,7 +3618,7 @@
   client:
     type: mobile app
     name: HeyTapBrowser
-    version: 45.7.1.9
+    version: "45.7.1.9"
   device:
     type: smartphone
     brand: RE
@@ -3635,7 +3635,7 @@
   client:
     type: mobile app
     name: HeyTapBrowser
-    version: 45.7.0.0
+    version: "45.7.0.0"
   device:
     type: smartphone
     brand: RE
@@ -3653,7 +3653,7 @@
     type: browser
     name: Chrome Mobile
     short_name: CM
-    version: 86.0.4240.99
+    version: "86.0.4240.99"
     engine: Blink
     engine_version: ""
   device:
@@ -3673,7 +3673,7 @@
     type: browser
     name: Yandex Browser
     short_name: YA
-    version: 20.7.4.108.00
+    version: "20.7.4.108.00"
     engine: Blink
     engine_version: ""
   device:
@@ -3693,7 +3693,7 @@
     type: browser
     name: Yandex Browser
     short_name: YA
-    version: 20.7.5.84.00
+    version: "20.7.5.84.00"
     engine: Blink
     engine_version: ""
   device:
@@ -3713,7 +3713,7 @@
     type: browser
     name: Yandex Browser
     short_name: YA
-    version: 20.6.0.211.00
+    version: "20.6.0.211.00"
     engine: Blink
     engine_version: ""
   device:
@@ -3733,7 +3733,7 @@
     type: browser
     name: Yandex Browser
     short_name: YA
-    version: 20.7.5.84.00
+    version: "20.7.5.84.00"
     engine: Blink
     engine_version: ""
   device:
@@ -3753,7 +3753,7 @@
     type: browser
     name: Yandex Browser
     short_name: YA
-    version: 20.7.2.70.00
+    version: "20.7.2.70.00"
     engine: Blink
     engine_version: ""
   device:
@@ -3773,7 +3773,7 @@
     type: browser
     name: Yandex Browser
     short_name: YA
-    version: 20.7.5.84.00
+    version: "20.7.5.84.00"
     engine: Blink
     engine_version: ""
   device:
@@ -3793,7 +3793,7 @@
     type: browser
     name: Yandex Browser
     short_name: YA
-    version: 20.7.5.84.00
+    version: "20.7.5.84.00"
     engine: Blink
     engine_version: ""
   device:
@@ -3813,7 +3813,7 @@
     type: browser
     name: Chrome Mobile
     short_name: CM
-    version: 86.0.4240.99
+    version: "86.0.4240.99"
     engine: Blink
     engine_version: ""
   device:
@@ -3833,7 +3833,7 @@
     type: browser
     name: Opera Mobile
     short_name: OM
-    version: 43.3.2254.141404
+    version: "43.3.2254.141404"
     engine: Blink
     engine_version: ""
   device:
@@ -3853,7 +3853,7 @@
     type: browser
     name: Yandex Browser
     short_name: YA
-    version: 20.8.5.97.00
+    version: "20.8.5.97.00"
     engine: Blink
     engine_version: ""
   device:
@@ -3873,7 +3873,7 @@
     type: browser
     name: Yandex Browser
     short_name: YA
-    version: 20.8.2.90.01
+    version: "20.8.2.90.01"
     engine: Blink
     engine_version: ""
   device:
