--- a/Tests/fixtures/unknown.yml
+++ b/Tests/fixtures/unknown.yml
@@ -2877,9 +2877,9 @@
     engine: WebKit
     engine_version: ""
   device:
-    type: "desktop"
-    brand: "AC"
-    model: "Chromebook 14"
+    type: desktop
+    brand: AC
+    model: Chromebook 14
   os_family: Android
   browser_family: Android Browser
 - 
