feat(device) detect new brand Artel models: Quadro Pro, Quadro, Tesla,  Air, Komi 3, Tomchi, Premium, U3 4G, Z5, Star, Sentinel X, Sentinel X D5,  Sentinel X 8G, Nova, Connect, Choice, Style

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -3352,6 +3352,19 @@ Compal:
   device: 'feature phone'
   model: '$1'
 
+# Artel
+Artel:
+  regex: 'Artel[_ ]'
+  device: 'smartphone'
+  models:
+    - regex: 'Artel[_ ](Quadro(?: Pro)?|Tesla|Air|Tomchi|Premium|U3_4G|Z5|Sentinel (?:X 8G|X D5|X))'
+      model: '$1'
+    - regex: 'Artel[_ ]Komi3'
+      model: 'Komi 3'
+    - regex: 'Artel[_ ](Star|Nova|Connect|Choice|Style)'
+      model: '$1'
+      device: 'tablet'
+
 # ComTrade Tesla
 ComTrade Tesla:
   regex: 'Tesla|Impulse 7.85 3G|Smartphone_6.1|SP(?:6.2|6.2_Lite)|TTL(?:713G|8)'
