feat(device) detect brand CUBOT model: Quest feat(device) detect brand Kiano model: Elegance 6 5.85"

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -3685,7 +3685,7 @@ Cube:
 
 # CUBOT
 CUBOT:
-  regex: 'CUBOT|RAINBOW 2|KING_KONG_3|KINGKONG_MINI|QUEST LITE'
+  regex: 'CUBOT|RAINBOW 2|KING_KONG_3|KINGKONG_MINI|QUEST(?: LITE)?'
   device: 'smartphone'
   models:
     - regex: 'CHEETAH 2'
@@ -3704,6 +3704,8 @@ CUBOT:
       model: 'King Kong'
     - regex: 'QUEST LITE'
       model: 'Quest Lite'
+    - regex: 'QUEST'
+      model: 'Quest'
     - regex: 'CUBOT[ _]Echo'
       model: 'Echo'
     - regex: 'CUBOT[ _]MANITO'
@@ -7211,7 +7213,7 @@ Keneksi:
 
 # Kiano
 Kiano:
-  regex: 'Kiano|Elegance_[45]_[015](?:_PRO)?|CORE 10.1 DUAL 3G|Intelect ?(7|8|10)|Slim ?Tab ?\d+(?:[_ ]3GR?)?(?:[);/ ]|$)|Cavion[_ ]'
+  regex: 'Kiano|Elegance_[45]_[015](?:_PRO)?|Elegance 6|CORE 10.1 DUAL 3G|Intelect ?(7|8|10)|Slim ?Tab ?\d+(?:[_ ]3GR?)?(?:[);/ ]|$)|Cavion[_ ]'
   device: 'smartphone'
   models:
     - regex: 'Slim ?Tab ?(\d+)(?:[_ ]3GR?)?'
@@ -7227,6 +7229,8 @@ Kiano:
       model: 'Elegance $1.$2" Pro'
     - regex: 'Elegance_([45])_([015])'
       model: 'Elegance $1.$2"'
+    - regex: 'Elegance 6'
+      model: 'Elegance 6 5.85"'
     - regex: '(Kiano)?(Intelect|Elegance) ?(7|8|10)?'
       model: '$2 $3'
       device: 'tablet'
