feat(device) detect brand Google model: Pixel 5

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -5431,7 +5431,7 @@ Goly:
 
 # Google
 Google:
-  regex: 'Nexus|GoogleTV|Glass(?<!Browser)|CrKey[^a-z0-9]|Pixel(?: Build|\))|Pixel (?:XL|C|[2-4]|[2-4] XL)|Google 2XL|G011A'
+  regex: 'Nexus|GoogleTV|Glass(?<!Browser)|CrKey[^a-z0-9]|Pixel(?: Build|\))|Pixel (?:XL|C|[2-5]|[2-4] XL)|Google 2XL|G011A'
   device: 'smartphone'
   models:
     - regex: 'Glass'
@@ -5464,18 +5464,16 @@ Google:
       model: 'Pixel 3a XL'
     - regex: 'Pixel 3a'
       model: 'Pixel 3a'
-    - regex: 'Pixel 3'
-      model: 'Pixel 3'
     - regex: 'Pixel 4 XL'
       model: 'Pixel 4 XL'
     - regex: 'pixel 4a'
       model: 'Pixel 4a'
-    - regex: 'pixel 4'
-      model: 'Pixel 4'
-    - regex: 'Pixel 2|G011A'
+    - regex: 'G011A'
       model: 'Pixel 2'
     - regex: 'Google 2XL'
       model: 'Pixel 2 XL'
+    - regex: 'pixel ([2-5])'
+      model: 'Pixel $1'
     - regex: 'Pixel C'
       device: 'tablet'
       model: 'Pixel C'
