feat(device) detect brand Alcatel model: 3L (2020) (5029Y) feat(device) detect brand Huawei model: MatePad 10.4" (BAH3-L09) feat(device) detect brand POCO model: X3 NFC

--- a/Tests/fixtures/smartphone-17.yml
+++ b/Tests/fixtures/smartphone-17.yml
@@ -4359,7 +4359,7 @@
   device:
     type: smartphone
     brand: 41
-    model: A1 Alpha 20 Plus
+    model: Alpha 20 Plus
   os_family: Android
   browser_family: Chrome
 -
@@ -4399,7 +4399,7 @@
   device:
     type: smartphone
     brand: 41
-    model: A1 Alpha
+    model: Alpha
   os_family: Android
   browser_family: Chrome
 -
@@ -4562,3 +4562,63 @@
     model: Pixel 5
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; arm_64; Android 10; 5029Y_RU) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/84.0.4147.135 YaBrowser/20.8.4.75.00 SA/1 Mobile Safari/537.36
+  os:
+    name: Android
+    short_name: AND
+    version: "10"
+    platform: ARM
+  client:
+    type: browser
+    name: Yandex Browser
+    short_name: YA
+    version: 20.8.4.75.00
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: AL
+    model: 3L (2020)
+  os_family: Android
+  browser_family: Unknown
+-
+  user_agent: Mozilla/5.0 (Linux; Android 10; BAH3-L09) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/85.0.4183.81 Safari/537.36
+  os:
+    name: Android
+    short_name: AND
+    version: "10"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    short_name: CH
+    version: 85.0.4183.81
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tablet
+    brand: HU
+    model: MatePad 10.4"
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; U; Android 10; ru-ru; POCO X3 NFC Build/QKQ1.200512.002) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/71.0.3578.141 Mobile Safari/537.36 XiaoMi/MiuiBrowser/12.6.2-gn
+  os:
+    name: Android
+    short_name: AND
+    version: "10"
+    platform: ""
+  client:
+    type: browser
+    name: MIUI Browser
+    short_name: MU
+    version: 12.6.2
+    engine: WebKit
+    engine_version: "537.36"
+  device:
+    type: smartphone
+    brand: 0P
+    model: X3 NFC
+  os_family: Android
+  browser_family: Android Browser
