--- a/Tests/fixtures/tablet-2.yml
+++ b/Tests/fixtures/tablet-2.yml
@@ -156,7 +156,7 @@
   device:
     type: tablet
     brand: HU
-    model: MatePad 10.4
+    model: MatePad 10.4"
   os_family: Android
   browser_family: Chrome
 - 
@@ -616,7 +616,7 @@
   device:
     type: tablet
     brand: HU
-    model: MediaPad M3 Lite 10
+    model: MatePad 10.4"
   os_family: Android
   browser_family: Chrome
 - 
