--- a/.github/workflows/phpcs.yml
+++ b/.github/workflows/phpcs.yml
@@ -8,7 +8,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - name: Install dependencies
+        run: composer install --dev --prefer-dist --no-progress --no-suggest
       - name: PHPCS check
         uses: chekalsky/phpcs-action@v1
         with:
+          phpcs_bin_path: './vendor/bin/phpcs'
           enable_warnings: true
