feat(device) detect brand Tone model: e20

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -16801,7 +16801,7 @@ Ravoz:
 
 # Tone Mobile
 Tone:
-  regex: 'TONE (e19|m15)(?:[);/ ]|$)'
+  regex: 'TONE (e19|m15|e20)(?:[);/ ]|$)'
   device: 'smartphone'
   model: '$1'
 
