feat(composer) php-cs-fixed added to composer scripts

--- a/composer.json
+++ b/composer.json
@@ -39,6 +39,9 @@
         "doctrine/cache": "Can directly be used for caching purpose",
         "ext-yaml": "Necessary for using the Pecl YAML parser"
     },
+    "scripts": {
+      "php-cs-fixed": "php vendor/bin/phpcbf"
+    },
     "archive": {
         "exclude": ["/autoload.php"]
     }
