feat(alias device) added detect raw name models for browsers: Dalvik, MQQBrowser, UCWEB feat(alias device) result empty

--- a/Tests/Parser/fixtures/alias_devices.yml
+++ b/Tests/Parser/fixtures/alias_devices.yml
@@ -47,3 +47,53 @@
   user_agent: UCWEB/2.0 (Linux; U; Adr 4.1.1; en-US; C1605) U2/1.0.0 UCBrowser/8.6.0.276 U2/1.0.0 Mobile
   alias:
     name: C1605
+
+-
+  user_agent: Mozilla/5.0 (Linux; Android 4.4.2; 402LG Build/KOT49I.402LG10f) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/30.0.0.0 Mobile Safari/537.36
+  alias:
+    name: 402LG
+
+-
+  user_agent: Opera/9.80 (Android 10; Linux; Opera Mobi/ADR-1502251211) Presto/2.11.355 Version/12.10
+  alias:
+    name: ''
+
+-
+  user_agent: Dalvik/1.6.0 (Linux; U; Android 4.4.4; BIHEE A7+ Build/KTU84P)
+  alias:
+    name: A7+
+
+-
+  user_agent: Mozilla/5.0 (Linux; Android 10; SHV45-u) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/83.0.4103.106 Mobile Safari/537.36
+  alias:
+    name: SHV45-u
+
+-
+  user_agent: Mozilla/5.0 (Linux; U; Android 8.1.0; id; CPH1819 Build/O11019) AppleWebKit/528.5+ (KHTML, like Gecko) Version/3.1.2 Mobile Safari/525.20.1 UCBrowser/10.4.2.659 Mobile
+  alias:
+    name: CPH1819
+
+-
+  user_agent: Dalvik/1.6.0 (Linux; U; Android 4.1.1; MI 2S MIUI/JLB16.0)
+  alias:
+    name: MI 2S
+
+-
+  user_agent: MQQBrowser/3.6/Adr (Linux; U; 4.2.1; zh-cn; HUAWEI G610-U00 Build/G610-U00 V100R001CHNC17B914;540*960)
+  alias:
+    name: G610-U00
+
+-
+  user_agent: JUC(Linux;U;4.4.2;Ru_ru;LG-P715;480*800;)UCWEB7.4.0.65/139/400
+  alias:
+    name: LG-P715
+
+-
+  user_agent: JUC (Linux; U; 4.0.3; zh-cn; NOVO7_Tornados; 800*444) UCWEB1.0.1.113/147/800
+  alias:
+    name: NOVO7_Tornados
+
+-
+  user_agent: JUC (Linux; U; 4.0.1; zh-cn; HTC_HD7_T9399+; 480*800) UCWEB7.9.3.103/139/800
+  alias:
+    name: HD7_T9399+
