--- a/regexes/alias_devices.yml
+++ b/regexes/alias_devices.yml
@@ -5,6 +5,18 @@
 - regex: 'Android (?:[\d.]+;)\s?(?:[^;]+;)?\s?(.+)\) AppleWebKit'
   name: '$1'
 
-# UCWEB
-- regex: 'Adr [\d\.]+; (?:[a-z]{2}(?:-[a-z]{2})?; )(.+)\) U2/(?:[\d\.]+) UCBrowser'
+# Dalvik
+- regex: '^Dalvik/[\d\.]+ \(Linux; U;\s?Android\s?(?:[\d\.]+;)\s?(.+) (?:Build|MIUI)/(?:.+)\)'
   name: '$1'
+
+# MQQBrowser
+- regex: '^MQQBrowser/[\d\.]+/Adr \(Linux; U; (?:[\d\.]+;)\s?(?:[a-z]{2}(?:-[a-z]{2})?;)(.+) Build/(?:.+)\)'
+  name: '$1'
+
+# UCWEB
+- regex: 'Adr [\d\.]+; (?:[a-z]{2}(?:-[a-z]{2})?;)\s(.+)\) U2/(?:[\d\.]+) UCBrowser'
+  name: '$1'
+
+- regex: '^JUC\s?\(Linux;\s?U;\s?(?:[\d\.]+;)\s?(?:[a-z]{2}(?:[_-][a-z]{2});)\s?([^;]+);\s?\d+\*\d+;?\)\s?UCWEB'
+  name: '$1'
+
