feat(device) detect brand Xiaomi models: Redmi Note 9 Pro, MI 9 Lite, Mi Note 10 Pro

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -14279,8 +14279,8 @@ Xiaomi:
       model: 'MI 9T Pro'
     - regex: 'Mi9 Pro 5G(?:[);/ ]|$)'
       model: 'MI 9 Pro 5G'
-    - regex: 'MI 8 Lite(?:[);/ ]|$)'
-      model: 'MI 8 Lite'
+    - regex: 'MI ([89]) Lite(?:[);/ ]|$)'
+      model: 'MI $1 Lite'
     - regex: 'MI 5s Plus(?:[);/ ]|$)'
       model: 'MI 5s Plus'
     - regex: 'Xiaomi_2013061|2013061 Build'
@@ -14374,23 +14374,14 @@ Xiaomi:
     - regex: 'HM NOTE 1(?:LTE|S)(?:W|GLOBAL|TD)? (?:Build|MIUI)|HM NOTE 1LTE'
       device: 'phablet'
       model: 'Redmi Note 4G'
-    - regex: 'Redmi Note 6 Pro'
-      model: 'Redmi Note 6 Pro'
-      device: 'phablet'
-    - regex: 'Redmi Note 5 Pro'
-      model: 'Redmi Note 5 Pro'
-      device: 'phablet'
     - regex: 'Redmi Note 5A Prime'
       model: 'Redmi Note 5A Prime'
       device: 'phablet'
     - regex: 'M2003J15SC(?:[);/ ]|$)'
       model: 'Redmi Note 9'
       device: 'phablet'
-    - regex: 'Redmi Note 7 Pro(?:[);/ ]|$)'
-      model: 'Redmi Note 7 Pro'
-      device: 'phablet'
-    - regex: 'Redmi Note 8 Pro(?:[);/ ]|$)'
-      model: 'Redmi Note 8 Pro'
+    - regex: 'Redmi Note ([5-9]) Pro(?:[);/ ]|$)'
+      model: 'Redmi Note $1 Pro'
       device: 'phablet'
 
     - regex: 'Redmi[ _]Note[ _]([^;/) ]+)?'
@@ -14400,6 +14391,9 @@ Xiaomi:
       model: 'Redmi $1'
     - regex: 'MI_NOTE_Pro'
       model: 'MI Note Pro'
+      device: 'phablet'
+    - regex: 'Mi Note 10 Pro'
+      model: 'Mi Note 10 Pro'
       device: 'phablet'
     - regex: 'MI[ _]Note[ _]([^;/) ]+)?'
       model: 'MI Note $1'
