feat(device) detect brand Huawei models: P smart (2019) (POT-LX1T) feat(device) detect brand Xiaomi models: Black Shark 3 5G (SHARK KLE-H0), Black Shark 3 Pro 5G (SHARK MBU-H0) feat(device) detect brand Transpeed model: H616 feat(device) detect brand Realme models: 7 Pro (RMX2170), X3 Super Zoom (RMX2085), X50 Pro 5G (RMX2075)

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -6101,7 +6101,7 @@ Huawei:
       model: 'Nova Youth'
     - regex: 'FIG-L(?:A1|X[123])(?:[);/ ]|$)'
       model: 'P smart'
-    - regex: 'POT-(?:LX(?:[13]|2J|1AF)|AL00)(?:[);/ ]|$)'
+    - regex: 'POT-(?:LX(?:[13]|1T|2J|1AF)|AL00)(?:[);/ ]|$)'
       model: 'P smart (2019)'
     - regex: 'STK-LX1(?:[);/ ]|$)'
       model: 'P smart Z'
@@ -10016,7 +10016,7 @@ OnePlus:
 
 # Realme (sub brand Oppo)
 Realme:
-  regex: '(?:RMX(?:19(03|4[1235]|19|9[23]|2[157]|[01379]1|73)|20(?:[025-7]1|[037]2|2[57]|63|76|86|[234]0)|21(?:[12]1|42|76|8[059])|2200|18(0[1579]|11|3[13]|2[157]|[45]1|45))|(?:OPPO[ _]?)?CPH1861)(?:[);/ ]|$)'
+  regex: '(?:RMX(?:19(03|4[1235]|19|9[23]|2[157]|[01379]1|73)|20(?:[025-7]1|[037]2|2[57]|63|7[56]|8[56]|[234]0)|21(?:[12]1|42|7[60]|8[059])|2200|18(0[1579]|11|3[13]|2[157]|[45]1|45))|(?:OPPO[ _]?)?CPH1861)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: '(?:OPPO[ _]?)?CPH1861(?:[);/ ]|$)'
@@ -10059,6 +10059,8 @@ Realme:
       model: '6S'
     - regex: 'RMX206[13](?:[);/ ]|$)'
       model: '6 Pro'
+    - regex: 'RMX2170'
+      model: '7 Pro'
     - regex: 'RMX1925(?:[);/ ]|$)'
       model: '5S'
     - regex: 'RMX1811(?:[);/ ]|$)'
@@ -10075,17 +10077,17 @@ Realme:
       model: 'C15'
     - regex: 'RMX1831(?:[);/ ]|$)'
       model: 'U1'
-    - regex: 'RMX20(?:51|25)(?:[);/ ]|$)'
+    - regex: 'RMX20(?:51|[2]5)(?:[);/ ]|$)'
       model: 'X50 5G'
     - regex: 'RMX2071(?:[);/ ]|$)'
       model: 'X50 Pro'
-    - regex: 'RMX2076(?:[);/ ]|$)'
+    - regex: 'RMX207[56](?:[);/ ]|$)'
       model: 'X50 Pro 5G'
     - regex: 'RMX2072(?:[);/ ]|$)'
       model: 'X50 Pro Player'
     - regex: 'RMX2142(?:[);/ ]|$)'
       model: 'X3'
-    - regex: 'RMX2086(?:[);/ ]|$)'
+    - regex: 'RMX208[56](?:[);/ ]|$)'
       model: 'X3 Super Zoom'
     - regex: 'RMX2111'
       model: 'V5 5G'
@@ -14235,7 +14237,7 @@ POCO:
 
 # Xiaomi
 Xiaomi:
-  regex: 'Xiaomi(?!/(?:Miui|Mint[ ])Browser)|Mi9 Pro 5G|(?:MI [a-z0-9]+|Mi-4c|MI-One[ _]?[a-z0-9]+|MIX(?: 2S?)?)(?:[);/ ]|$)|HM (?:[^/;]+) (?:Build|MIUI)|(?:2014501|2014011|201481[12378]|201302[23]|2013061) Build|Redmi|MI_NOTE_Pro|POCOPHONE|(?:SHARK )?(KLE|MBU)-A0|SKR-[AH]0|SKW-[AH]0|POCO F1|DLT-[AH]0|MIBOX[234]([_ ]PRO)?|MiTV4[CSX]?|MiTV-(MSSP1|AXSO0)|AWM-A0|MI CC 9 Meitu Edition|MiBOX1S|MiTV4A|M2006C3(?:L[GC]|MN?G)|M2007J1SC|M2002J9[EG]|HM2014819|WT88047|M2004J(?:7[AB]|19)C|M2003J15SC|HM NOTE 1(?:LTE|W)|MI[_ ]PLAY|XIG01'
+  regex: 'Xiaomi(?!/(?:Miui|Mint[ ])Browser)|Mi9 Pro 5G|(?:MI [a-z0-9]+|Mi-4c|MI-One[ _]?[a-z0-9]+|MIX(?: 2S?)?)(?:[);/ ]|$)|HM (?:[^/;]+) (?:Build|MIUI)|(?:2014501|2014011|201481[12378]|201302[23]|2013061) Build|Redmi|MI_NOTE_Pro|POCOPHONE|(?:SHARK )?(KLE|MBU)-[AH]0|SKR-[AH]0|SKW-[AH]0|POCO F1|DLT-[AH]0|MIBOX[234]([_ ]PRO)?|MiTV4[CSX]?|MiTV-(MSSP1|AXSO0)|AWM-A0|MI CC 9 Meitu Edition|MiBOX1S|MiTV4A|M2006C3(?:L[GC]|MN?G)|M2007J1SC|M2002J9[EG]|HM2014819|WT88047|M2004J(?:7[AB]|19)C|M2003J15SC|HM NOTE 1(?:LTE|W)|MI[_ ]PLAY|XIG01'
   device: 'smartphone'
   models:
     # specific smartphone models
@@ -14249,6 +14251,10 @@ Xiaomi:
       model: 'Black Shark 2 Pro'
     - regex: '(?:SHARK )?KLE-A0'
       model: 'Black Shark 3'
+    - regex: '(?:SHARK )?KLE-H0'
+      model: 'Black Shark 3 5G'
+    - regex: '(?:SHARK )?MBU-H0'
+      model: 'Black Shark 3 Pro 5G'
     - regex: '(?:SHARK )?MBU-A0'
       model: 'Black Shark 3 Pro'
     - regex: 'Xiaomi_2014501|2014501 Build'
@@ -17429,7 +17435,7 @@ Transpeed:
   models:
     - regex: 'TR99 MINI\+'
       model: 'TR99 Mini Plus'
-    - regex: '(?:Transpeed_)?(TR99|6K)(?:[);/ ]|$)'
+    - regex: '(?:Transpeed_)?(TR99|H616|6K)(?:[);/ ]|$)'
       model: '$1'
 
 # 8848 (everest 8848, 8848 titanium)
