Rename composer package

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "piwik/device-detector",
+    "name": "matomo/device-detector",
     "type": "library",
     "description": "The Universal Device Detection library, that parses User Agents and detects devices (desktop, tablet, mobile, tv, cars, console, etc.), clients (browsers, media players, mobile apps, feed readers, libraries, etc), operating systems, devices, brands and models.",
     "keywords": ["useragent","parser","devicedetection"],
@@ -44,5 +44,8 @@
     },
     "archive": {
         "exclude": ["/autoload.php"]
+    },
+    "replace": {
+        "piwik/device-detector":"*"
     }
 }
